# supertux3

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
docs/: PLAN.md  asset_pipeline.md  packaging.md  pi400.md
levels/: level1.json  level10.json  level11.json  level12.json  level13.json  level14.json  level15.json  level16.json  level17.json  level18.json  level19.json  level2.json  level20.json  level21.json  level22.json  level23.json  level24.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json  secret1.json
packaging/: install-user.sh  org.supertux3.SuperTux3.desktop  org.supertux3.SuperTux3.metainfo.xml  supertux3.in
packaging/debian/: changelog  control  rules
packaging/flatpak/: org.supertux3.SuperTux3.yaml
packaging/rpm/: supertux3.spec
src/supertux3/: __init__.py  assets.py  game.py  main.py  settings.py
src/supertux3/engine/: animation.py  audio.py  camera.py  controls.py  particles.py  save.py  scene.py  spritesheet.py  weather.py
src/supertux3/entities/: boss.py  buddy.py  collectible.py  enemy.py  entity.py  platform.py  player.py  projectiles.py
src/supertux3/scenes/: editor.py  gameover.py  intro.py  keybind.py  levelselect.py  menu.py  options.py  play.py  worldmap.py
src/supertux3/world/: level.py  tilemap.py  tmx.py
tests/: test_smoke.py
tools/: build_level1.py  build_levels.py  json_to_tmx.py
tools/asset_pipeline/: comfy_gen.py  flux_cutout.py  gen_audio.py  gen_icon.py  gen_pixelart.py
